syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message TransactionCountByBlockNumber {
  option (gorm.opts) = {ormable: true};

  string transaction_hash = 1 [(gorm.field).tag = {primary_key: true}];
  uint32 block_number = 2 [(gorm.field).tag = {index: "transaction_count_by_block_count_idx_block_count"}];
  uint32 count = 3;
}
